// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App loads files and selects a file to display in the editor 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-a4s4gt"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 MuiGrid-grid-md-4 css-gj1fbr-MuiGrid-root"
      >
        <div
          class="pointer"
        >
          📁 root
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 MuiGrid-grid-md-8 css-vok43g-MuiGrid-root"
      >
        <section
          style="display: flex; position: relative; text-align: initial; width: 100%; height: 100%;"
        >
          <div
            style="display: flex; height: 100%; width: 100%; justify-content: center; align-items: center;"
          >
            Loading...
          </div>
          <div
            style="width: 100%; display: none;"
          />
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App should render correctly  1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-a4s4gt"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-4 MuiGrid-grid-md-4 css-gj1fbr-MuiGrid-root"
      >
        <div>
          Mock FolderNode
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 MuiGrid-grid-md-8 css-vok43g-MuiGrid-root"
      >
        <div>
          Mock MonacoEditor
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
